<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/screen"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  
  <ScrollView android:id="@+id/sendtoosm_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="0dip"
    android:layout_weight="1">
    <TableLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:stretchColumns="1"
      android:layout_marginTop="5dip"
      android:layout_marginLeft="5dip">
      <TableRow>
        <ImageView android:src="@drawable/icon"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

          <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_marginLeft="10dip">
          <TextView android:text="@string/contribute_form_name" android:id="@+id/contribute_form_name" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView><EditText android:text="" android:id="@+id/contribute_form_edit_name" android:layout_height="fill_parent" android:layout_width="fill_parent"></EditText>
        
          <TextView android:text="@string/contribute_form_visibility" android:id="@+id/contribute_form_visibility" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
          <RadioGroup android:id="@+id/sendtoosm_privacy_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <RadioButton android:id="@+id/sendtoosm_private"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/sendtoosm_private"/>
            
            
            <RadioButton android:id="@+id/sendtoosm_identifiable"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/sendtoosm_identifiable"/>
          
</RadioGroup>
        

</LinearLayout>
      </TableRow>

      </TableLayout>
  </ScrollView>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    android:padding="3dip">
    <Button android:id="@+id/sendtoosm_cancel"
      android:layout_width="wrap_content"
      android:layout_height="48dip"
      android:layout_gravity="right"
      android:text="@string/cancel"
      android:textSize="14dip"/>
    <TextView
      android:layout_width="0dip"
      android:layout_height="wrap_content"
      android:layout_weight="1"/>
    <Button android:id="@+id/sendtoosm_send_now"
      android:layout_width="wrap_content"
      android:layout_height="48dip"
      android:layout_gravity="right"
      android:text="@string/sendtoosm_send_now"
      android:textSize="14dip"/>
  </LinearLayout>
</LinearLayout>
